--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
         </div>
       </li> -->
       <li class="nav-item active">
-        <a class="nav-link" href="projects.html"><span class="whitecolor">PROJECTS</span></a>
+        <a class="nav-link" href="projects.html"><span class="whitecolor">WORK</span></a>
       </li>
 
       <li class="nav-item active">
@@ -90,8 +90,7 @@
     <section id="about" class="about">
       <div class="container uppermargin" data-aos="fade-up">
       <p class ="paragraph">
-		  Glad you stopped by! Hello once again! I am Anirudh - a soccer following, tea drinking, interaction designer who loves qualitative research (although I use a mixed methods approach) and an ever bleeding passion for accessibility to build better products. Formely, I was a  User Experience Specialist at UserWorks, Inc. <b> I am now open to UX/Accessibility Jobs in the market. </p> </b>
-
+		  Glad you stopped by! Hello once again! I am Anirudh - a soccer following, tea drinking, User Experience Researcher with an ever bleeding passion for accessibility, diversity and inclusion. I've worked in companies like UserWorks, Inc. and LTI. Currently at Reuters, I hold a graduate degree in Human-Centered Computing from the University of Maryland, Baltimore County.</p>
 
 
             <img src="assets/img/Personal/Ani_New.jpg" class="avatar6" alt="Circular image of Anirudh Nagraj pointing to the mountains.">
@@ -110,7 +109,8 @@
 
               <h3 class ="uppermargin3" > Me and UX</h3>
               <p class="paragraph">
-             By leveraging UX Research, I get into the users' minds whom businesses serve. I help identify the clients' and stakeholders' needs, thereby increasing the product's value at hand. I like to work with multiple methods  (Interviews, Contextual Inquiries, Personas, etc.) to triangulate findings, backing up qualitative data with quantitative and vice-versa. The technique used in the research is dependent on the requirements of the businesses, stakeholders, and users. I am well versed in Assistive Technologies like JAWS, Dragon Naturally Speaking, NVDA. P.S. I am also a huge fan of Web Accessibility, and I will take the IAAP- CPACC certification soon. </p>
+             By leveraging UX Research, I get into the users' minds whom businesses serve. I help identify the clients' and stakeholders' needs, thereby increasing the product's value at hand. I like to work with multiple methods  (Interviews, Contextual Inquiries, Personas, etc.) to triangulate findings, backing up qualitative data with quantitative and vice-versa. The technique used in the research is dependent on the requirements of the businesses, stakeholders, and users. I am well versed in Assistive Technologies like JAWS, Dragon Naturally Speaking, NVDA.   At Reuters, I work as the lead researcher on the rapid research program where we run qualitative studies on product features, workflows, and concepts for quicktime results and decisions to inform in a short period of time.  I come with an engineering background and a deep rooted passion for inclusive design and accessibility. I employ various research methods and accessibility tools to help build <b class="textbackground2">impactful products,</b> bringing customers and businesses closer to one another.  </p>
+</p>
 
             <h3 class="uppermargin"> Other things you may want to know about me...</h3>
             <!-- <div class="row">
