--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <a class="nav-link active" href="index.html"><span class="whitecolor">HOME</span> <span class="sr-only">(current)</span></a>
           </li
         <li class="nav-item active">
-          <a class="nav-link" href="projects.html"><span class="whitecolor">PROJECTS</span></a>
+          <a class="nav-link" href="projects.html"><span class="whitecolor">WORK</span></a>
         </li>
         <li class="nav-item active">
           <a class="nav-link" href="research.html"><span class="whitecolor">RESEARCH</span></a>
@@ -71,15 +71,22 @@
   <!-- ======= Hero Section ======= -->
 
   <section id="hero" class="d-flex flex-column justify-content-center">
-  <h2 align="center"><b>Hello! 👋🏽 I am Anirudh.</b></h2>
+  <h2 align="center"><b>Hello! 👋🏽 I am Anirudh. </b></h2>
       <div class="container" data-aos="zoom-in" data-aos-delay="100">
 
+        <img src="assets/img/Personal/Ani_Photo.jpg" class="avatar6" alt="Circular image of Anirudh Nagraj pointing to the mountains.">
+
+
+
           <div>
-            <p class="paragraph3" align="center"> Formerly, a <b class="textbackground2"> User Experience Specialist </b> at <b class="textbackground2 "> UserWorks, Inc.</b> I come with an engineering background and a deep rooted passion for inclusive design and accessibility. I employ various research methods and accessibility tools to help build <b class="textbackground2">impactful products,</b> bringing customers and businesses closer to one another.  </p>
+             <p class="paragraph3" align="center"> <b class="textbackground2"> User Experience Researcher </b> at <b class="textbackground2 "> Thomson Reuters.</b> <!-- At Reuters, I work as the lead researcher on the rapid research program where we run qualitative studies on product features, workflows, and concepts for quicktime results and decisions to inform in a short period of time.  I come with an engineering background and a deep rooted passion for inclusive design and accessibility. I employ various research methods and accessibility tools to help build <b class="textbackground2">impactful products,</b> bringing customers and businesses closer to one another.  </p> -->
         </div>
 
     </div>
 
+    <div class="center bottompadding"><a href ="projects.html"><button class="custom-btn btn-1"> VIEW WORK </button></a>
+      </div>
+    </div>
          <!--
           <h2 align="center" aria-label="Header Title" alt="Hello there! 👋🏽 I am Anirudh."><b>Hello there! 👋🏽 I am Anirudh.</b></h2>
           <!-- <h3 style="color:#000; font-family: Raleway, sans-serif !important;" align="center"><b>Welcome to my website!</b></h3>
@@ -90,21 +97,19 @@
 
       <!-- <div class="center"><button class="custom-btn1 btn-2" onclick="window.location.href='index.html#portfolio'" > VIEW PROJECTS </a></button> </div> -->
     </div>
-  </section><!-- End Hero -->
+  </div><!-- End Hero -->
 
   <!-- <div class="devicer"></div> -->
 
-  <main id="main">
+  <!-- <main id="main">
 
   <!-- <div class="container">
     <h1 class="uppermargin paragraph4"> I've done a variety of projects.</h1>
     <h1 class="uppermargin paragraph4"> Be it building products, providing recommendations, or getting into research to provide guidelines.
-</h1> -->
-<div class="center bottompadding"><a href ="projects.html"><button class="custom-btn btn-1"> VIEW PROJECTS </button></a>
-  </div>
-</div>
+</h1>
 
-</main><!-- End #main -->
+
+</main><!-- End #main  -->
 
 <!-- ======= Footer ======= -->
 <footer id="footer">
