--- a/projects.html
+++ b/projects.html
@@ -81,7 +81,7 @@
 
   <main id="main" data-aos="fade-up">
 
-    <section class="container" id="portfolio">
+    <!-- <section class="container" id="portfolio">
         <div class="container grid default-grid">
               <div class="row row-xs-sm sample-row">
           <div class="col-xs-6 col-sm-6 gutter-margin-xs-md bottompadding"><div class="inner"><h1 style="color:#333333" class=" uppermargin"><strong> Document Remediation - Usability Study - Coming soon! </strong></h1></div>
@@ -89,25 +89,42 @@
               Our team at UserWorks worked on remediating documents for different state departments and making them accessible for people with disabilities. We tested each document manually and then run automated checks for proofreading. Accessibility testing done with tools like JAWS and Dragon. We then conducted 1-1 interviews on the documents remediated for review and feedback
             </p>
 
-             <!-- <a href="docremed.html"><button class="custom-btn btn-1">READ MORE </button></a></button>  -->
+             <!-- <a href="docremed.html"><button class="custom-btn btn-1">READ MORE </button></a></button>
         </div>
             <div class="col-xs-6 col-sm-6 gutter-margin-xs-md"><div class="inner"><img src="assets/img/Personal/Documents.png" class="avatar9 uppermargin3" alt="Red color folder with some papers inside."></div></div>
             </div>
-      </section>
+      </section> -->
+
+      <section class="container">
+            <div class="container uppermargin grid default-grid">
+                  <div class="row row-xs-sm sample-row">
+              <div class="col-xs-6 col-sm-6 gutter-margin-xs-md bottompadding"><div class="inner"><h1 style="color:#333333"><strong> Rapid Research (Tax and Accounting)- Thomson Reuters</strong></h1></div>
+                <p class="paragraph2 justified uppermargin">
+                    At Reuters, I work as the lead researcher on the rapid research program where we run qualitative studies in the tax and accounting domain on product features, workflows, and concepts for quicktime results and decisions to inform in a short period of time. (Bi-weekly cadence)
+                </p>
+
+              <a href="rapidresearch.html"><button class="custom-btn btn-1">READ MORE </button></a></button></div>
+
+                <div class="col-xs-6 col-sm-6 gutter-margin-xs-md"><div class="inner"><img src="assets/img/Personal/TR_Logo.png" class="img-fluid" alt="Thomson Retuers Logo"></div></div>
+                </div>
+          </section>
+
 
       <section class="containerblue">
         <div class="container grid default-grid">
               <div class="row row-xs-sm sample-row">
-          <div class="col-xs-6 col-sm-6 gutter-margin-xs-md uppermargin3 bottompadding"><div class="inner"><h1 style="color:#333333"><strong>United States Postal Service (USPS.com) Website Usability Study</strong></h1></div>
+          <div class="col-xs-6 col-sm-6 gutter-margin-xs-md uppermargin3 bottompadding"><div class="inner"><h1 style="color:#333333"><strong>USPS.com Website Usability Study - UserWorks, Inc.</strong></h1></div>
             <p class="paragraph2 justified uppermargin">
               Our team at UserWorks conducted a usability study over a period of two months to generate recommendations for the United States Postal Service website (USPS.com).
             </p>
 
          <button class="custom-btn btn-1" onclick="window.location.href='postal.html'"> READ MORE </a></button>
       </div>
-            <div class="col-md-6 col-sm-6 gutter-margin-xs-md"><div class="inner"><img src="assets/img/Personal/usps-logo.png" class="img-fluid uppermargin3" alt="USPS logo"></div></div>
+            <div class="col-md-6 col-sm-6 gutter-margin-xs-md"><div class="inner"><img src="assets/img/Personal/UW_Logo.png" class="avatar8 uppermargin3" alt="UW_logo"></div></div>
             </div>
       </section>
+
+
 
 <section class="container">
       <div class="container uppermargin grid default-grid">
