--- a/rapidresearch.html
+++ b/rapidresearch.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <a href="#hero-page" class="skip">Skip to main content</a>
-  <title>USPS.com UX</title>
+  <title>Rapid Reserach </title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -54,7 +54,7 @@
 
 
       <li class="nav-item active">
-        <a class="nav-link" href="research.html"><span class="whitecolor">RESEARCH</span></a>
+        <a class="nav-link" href="research.html"><span class="whitecolor">WORK</span></a>
       </li>
       <li class="nav-item active">
         <a class="nav-link" href="index.html#about"><span class="whitecolor">ABOUT ME</span></a>
@@ -79,124 +79,103 @@
     <section id="hero-page" class="d-flex flex-column justify-content-center">
   		<div class="container" data-aos="zoom-in" data-aos-delay="100">
 
-  			<h1>USPS.com® Website Usability Study at UserWorks, Inc. </h1>
+  			<h1>Rapid Research - Thomson Reuters</h1>
   		</div>
    			<div class="devicer"></div>
-  		</div>
   </section><!-- End Portfolio Details -->
 
     <div class="container">
 
     			<p class="justified">
-    				<h3><b>What's this about?</b></h3>
+    				<h3><b>Background and Role</b></h3>
     				<p class=" justified paragraph">
-    					<b class="textbackground3"> Our team at UserWorks conducted a  study to generate recommendations for the United States Postal Service website. </b> The personnel at USPS wanted to check the interaction of users in new pages that included international shipping. They also wanted us to analyze features that could be added in the future but in accordance with what the users mention.
-             ** Note - not everything about the study is mentioned here on account of an NDA present.
-    				</p>
-    			</p>
+              As the lead User Experience Researcher conducting rapid research (Qualitative in nature), I help make the vision to build out the Rapid Research Program across the Tax & Accounting businesses at Thomson Reuters a reality. Thus far, I have oprerated with two products - ONVIO and UltraTax.
 
-    			<h3 class ="uppermargin"><strong>My Role </strong></h3>
-    			<p class="justified paragraph">  As a User Experience Specialist, my task included conducting interviews, note-taking and data analysis for key pointers. My team and I then provided recommendations based on the analyzed data.</p>
+              Onvio Firm Management combines document management, time and billing, trial balance capabilities, online client collaboration, and project management in a single integrated product. (Source)
+
+              I operate in a smooth cycle that goes from intake meetings to writing report. The processes in between include tasks like understanding the concept/scenarios, writing screeners for recruitment, writing the facilitator guide, conducting studies with customers, meeting with internal stakeholders for debriefs. </p>
+
+              <figure>
+                  <img src="assets/img/Personal/interview.png" class="avatar6" alt="interview graphic">
+
 
     		<h3 class="uppermargin"><strong>Outcome</strong></h3>
-    		<p class="justified paragraph"> UserWorks provided recommendations based on scenario-based testing/interviews for updated pages of USPS.com® </p>
-
-        <h3 class="uppermargin"><strong>Goals</strong></h3>
-        <p class="justified paragraph">
-          <b class="textbackground3">Scenario-based testing/interview  to obtain feedback on 3 updated pages on USPS.com® (International Mail & Shipping Services, How to Send a Letter or Postcard: International, and How to Send a Package: International). </b>​ </p>
-
-          <p class="justified paragraph">Participant review of different proposed homepage Step Treatment designs. </p>​
-
-          <figure>
-              <img src="assets/img/Personal/postbox.png" class="avatar6" alt="Landing Page of the Redesigned Website">
-              <figcaption  align="center"><i>A postbox</i></figcaption>
-
+    		<p class="justified paragraph">Quick turnaround times (from intake request to disseminating findings), therby adding more flexibility in the way feedback is captured. High impact actionable qualitative insights delivered on a bi-weekly basis. Involves different features, concepts, and workflows across different products (ONVIO and UltraTax)</p>
 
     <h3 class ="uppermargin"><strong>Challenges</strong></h3>
-    <ul><li class="justified paragraph">  Combating participant no-shows</li>
-    <li class="justified paragraph"> Maintaining attention span over 80 minute long interviews.</li>
-    <li class="justified paragraph"> Content question creation for interviews was time consuming</li>
+    <ul><li class="justified paragraph">  Exhaustive Recruitment process may lead to a delay if other studies are in the queue.</li>
+    <li class="justified paragraph"> Difficult to fit in all the questions present in the guide within 30 minutes.</li>
+    <li class="justified paragraph"> Content importance.</li>
     <li class="justified paragraph">
-      Prioritizing research findings and converting into meaningful recommndations.
+      Since each research study has a different workflow and can be related to a different product, understanding that workflow in a short period of time may prove challenging.
     </li>
     <li class="justified paragraph">
-      Lack of statistical data to highlight the actual impact of the change on account of the recommendations provided.
+      Lack of statistical data to highlight the actual impact of the change on account of the insights provided.
+    </li>
+    <li class="justified paragraph">
+      Relevance of using quantitative data (Metrics/SEQ) for such studies.
     </li>
     </ul>
 
     </div>
 
-    	<blockquote class="otro-blockquote">
-    		I like the images. They are very easy on the eye and convey a lot of information.
-    	</blockquote>
-
-
-    </section>
-
-
-
 <div class="container">
-	<h3 class ="uppermargin"><strong>Study Structure</strong></h3>
-	<p class="justified paragraph"> 24 usability test sessions conducted remotely in November 2021.​ </p>
- <p class= "justified paragraph"> Each session was approximately 80 minutes.</p>
- <p class ="paragraph">   Sessions were split into those conducted on mobile and those on desktop, along with those mailing and shipping primarily for personal (consumer) reasons, business reasons, or a bit of both (hybrid).
+  <h3 class ="uppermargin"><strong>Some Tools Involved In My Research</strong></h3>
+  <div class="row">
+    <div class="col-md-6" align="center">
+
+                    <figure>
+                        <img src="assets/img/Personal/User-Interviews-Logo.png" class="img-fluid" alt="interview graphic">
+  </div>
+  <div class="col-md-6" align="center">
+
+                  <figure>
+                      <img src="assets/img/Personal/UZ Logo.png" class="img-fluid uppermargin3" alt="interview graphic">
+      </div>
+  </div>
 
 </div>
 
-  <section>
-    <div class="container">
-  	<div class="containerblue bottompadding">
-  		<h3 class="uppermargin3 color-x" align="center"><Strong>USER INTERVIEWS</Strong></h3>
-  		<p class="justified countermargin" style="color:#000">
-
-        4 participants in each category were recruited, for a total of 4 mobile personal (consumer) sessions, 4 mobile business, 4 mobile hybrid (with 1 participating using a tablet), 4 desktop personal, 4 desktop business, and 4 desktop hybrid.
-
-        Other participant categories, such as business size (where applicable), age, education, location (urban, suburban, or rural), state, and how often they visited USPS.com were recruited to the best possible mix.
-
-  		</p>
-  		<div class="row">
-  			<div class="col-md-3 offset-1 facts uppermargin" align="center">
-              <div class="count-box">
-                <i class="icofont-people"></i>
-                <span >26</span>
-                <p style="color:#000; font-size:14px">Participants Interviewed</p>
-  			  </div>
-  		</div>
-  		<div class="col-md-6 uppermargin countermargin">
-  			<p class="paragraph"  style="color:#000"><b>Demographic:</b> Users of the USPS.com website<p>
-
-  				<p class="paragraph" style="color:#000"><b>Gender:</b> Any</p>
-
-  					<p class="paragraph" style="color:#000"><b>Ethnicity: </b> Any</p>
-
-  				</div>
-  		</div>
-
-   </div>
-</div>
-</section>
-
 <div class="container">
-  <h3 class="uppermargin3"><Strong>Some Findings from the Interviews </Strong></h3>
+  <h3><Strong>Process</Strong></h3>
   <p class="justified paragraph">
-      From the exhaustive interviews conducted, interesting findings emerged.
+      I follow a rigorous, yet streamlined process for my qualitative studies.
     </p>
-    <ul>
-    <li class ="paragraph">The participants in this study sent international mail and packages very infrequently.</li>
-    <ul>
-      <li class="paragraph">This was intentional; we wanted to obtain feedback from those who would most benefit from these additions – those to whom this information is new.</li>
-      <li class="paragraph">Most business participants were sending documents or printed materials, rather than manufactured parts or goods.</li>
-      <li class="paragraph">Going to the Post Office was generally not seen as a hassle because the Post Office was either close by or worth the travel, given how infrequently they sent internationally.
-      </li>
-      <li class="paragraph">
-      Usually, participants wanted to avoid going to the Post Office to avoid lines or “unfriendly” staff, rather than due to travel distance.
-    </li>
-      </p>
-    </ul>
-    <li class ="paragraph"> Most saw USPS.com as a cohesive website, rather than a “portal” of sorts.
-  </ul>
-  </p>
+    <figure>
+        <img src="assets/img/Personal/RR_study.png" class="img-fluid" alt="Study outline">
+  </div>
 
+<div class="container">
+  <div id="prg-counter">
+    <div class="prg-container row">
+        <div class="col-md-2">
+          <h3 class="prg-count" data-count="7">0</h3>
+          <h4 class="prg-count-title">Rapid Research Studies</h4>
+        </div>
+        <div class="col-md-2">
+          <h3 class="prg-count" data-count="5">0</h3>
+          <h4 class="prg-count-title">Months</h4>
+        </div>
+        <div class="col-md-2">
+          <h3 class="prg-count" data-count="2">0</h3>
+          <h4 class="prg-count-title">Notable Products</h4>
+        </div>
+        <div class="col-md-2">
+          <h3 class="prg-count" data-count="10+">0</h3>
+          <h4 class="prg-count-title">Features</h4>
+        </div>
+        <div class="col-md-2">
+          <h3 class="prg-count" data-count="3">2</h3>
+          <h4 class="prg-count-title">Participants with Disabilities</h4>
+        </div>
+        <div class="col-md-2">
+          <h3 class="prg-count" data-count="1">35</h3>
+          <h4 class="prg-count-title">Different Users</h4>
+        </div>
+    </div>
+
+      <hr/>
+  </div>
   </div>
 
 <div class="container">
@@ -208,7 +187,7 @@
 
   <section>
     <div class="container">
-      <h3><b>Impact</b></h2>
+      <h3><b>Impact</b>
       <p class="justified paragraph">Recommendations to improve the overall User Experience of users visiting USPS.com</b>. </p>
       <p class="justified paragraph">Simpler navigation across pages. </p>
       <p class="justified paragraph">Placement of images where required for improved readability </p>
