--- a/research.html
+++ b/research.html
@@ -44,7 +44,7 @@
         <a class="nav-link" href="index.html"><span class="whitecolor">HOME</span> <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="projects.html"><span class="whitecolor">PROJECTS</span></a>
+        <a class="nav-link" href="projects.html"><span class="whitecolor">WORK</span></a>
       </li>
 
 
@@ -121,6 +121,8 @@
             <p class="quotemarks justified"><i> Emerging economies, such as those in South Asia, have begun to invest in the HCI discipline through research and innovation, affecting HCI as a knowledge discipline throughout the area. However, limited research has been conducted to understand how HCI learning is imparted and how students get introduced. With the advent of innovation in knowledge sharing, newer avenues have emerged that help students better understand the field. We surveyed 64 participants to investigate the avenues of HCI exposure in South Asia. We categorized these avenues into Traditional, Emergent, and Intersectional based on findings. We unpack the implications of avenues in facilitating HCI knowledge dissemination. We found access to community events and institute ranking play essential roles in accessing HCI knowledge.</i></p>
           </section>
         </p>
+
+        <p>Access the paper <a href ="https://www.researchgate.net/publication/360804900_HCI_Knowledge_Dissemination_in_South_Asia_through_both_Coursework_and_Community_Engagement">here </a></p>
 
     </div>
     </section>
