--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   <h2 align="center"><b>Hello! 👋🏽 I am Anirudh. </b></h2>
       <div class="container" data-aos="zoom-in" data-aos-delay="100">
 
-        <img src="assets/img/Personal/Ani_Photo.jpg" class="avatar6" alt="Circular image of Anirudh Nagraj pointing to the mountains.">
+        <img src="assets/img/Personal/Ani_photo.jpg" class="avatar6" alt="Image of Anirudh Smiling">
 
 
 
