Changes to Rapid Research page

--- a/rapidresearch.html
+++ b/rapidresearch.html
@@ -99,8 +99,43 @@
                   <img src="assets/img/Personal/interview.png" class="avatar6" alt="interview graphic">
 
 
-    		<h3 class="uppermargin"><strong>Outcome</strong></h3>
+    		<h3 class="uppermargin"><strong>Outcomes</strong></h3>
     		<p class="justified paragraph">Quick turnaround times (from intake request to disseminating findings), therby adding more flexibility in the way feedback is captured. High impact actionable qualitative insights delivered on a bi-weekly basis. Involves different features, concepts, and workflows across different products (ONVIO and UltraTax)</p>
+
+        <div class="counter">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-lg-3">
+                        <div class="count-up">
+                            <p class="counter-count">2</p>
+                            <h3>Tax Products</h3>
+                        </div>
+                    </div>
+
+                    <div class="col-12 col-lg-3">
+                        <div class="count-up">
+                            <p class="counter-count">7</p>
+                            <h3>Reports</h3>
+                        </div>
+                    </div>
+
+                    <div class="col-12 col-lg-3">
+                        <div class="count-up">
+                            <p class="counter-count">35</p>
+                            <h3>Customers Interviewed</h3>
+                        </div>
+                    </div>
+
+                     <div class="col-12 col-lg-3">
+                       <div class="count-up">
+                            <p class="counter-count">15</p>
+                            <h3>Unique Features and Workflows</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
 
     <h3 class ="uppermargin"><strong>Challenges</strong></h3>
     <ul><li class="justified paragraph">  Exhaustive Recruitment process may lead to a delay if other studies are in the queue.</li>
@@ -145,45 +180,7 @@
         <img src="assets/img/Personal/RR_study.png" class="img-fluid" alt="Study outline">
   </div>
 
-<div class="container">
-  <div id="prg-counter">
-    <div class="prg-container row">
-        <div class="col-md-2">
-          <h3 class="prg-count" data-count="7">0</h3>
-          <h4 class="prg-count-title">Rapid Research Studies</h4>
-        </div>
-        <div class="col-md-2">
-          <h3 class="prg-count" data-count="5">0</h3>
-          <h4 class="prg-count-title">Months</h4>
-        </div>
-        <div class="col-md-2">
-          <h3 class="prg-count" data-count="2">0</h3>
-          <h4 class="prg-count-title">Notable Products</h4>
-        </div>
-        <div class="col-md-2">
-          <h3 class="prg-count" data-count="10+">0</h3>
-          <h4 class="prg-count-title">Features</h4>
-        </div>
-        <div class="col-md-2">
-          <h3 class="prg-count" data-count="3">2</h3>
-          <h4 class="prg-count-title">Participants with Disabilities</h4>
-        </div>
-        <div class="col-md-2">
-          <h3 class="prg-count" data-count="1">35</h3>
-          <h4 class="prg-count-title">Different Users</h4>
-        </div>
-    </div>
 
-      <hr/>
-  </div>
-  </div>
-
-<div class="container">
-  <h3 class="uppermargin3"><Strong>Recommendations  </Strong></h3>
-  <img src="assets/img/Personal/Screenshot 2022-05-06 031021.png" class="img-fluid uppermargin" alt="Image showing a recommendation">
-
-  <img src="assets/img/Personal/Screenshot 2022-05-06 031609.png" class="img-fluid uppermargin3" alt="Image showing a recommendation">
-  </div>
 
   <section>
     <div class="container">
