--- a/rapidresearch.html
+++ b/rapidresearch.html
@@ -109,6 +109,7 @@
                         <div class="count-up">
                             <p class="counter-count">2</p>
                             <h3>Tax Products</h3>
+
                         </div>
                     </div>
 
@@ -128,8 +129,8 @@
 
                      <div class="col-12 col-lg-3">
                        <div class="count-up">
-                            <p class="counter-count">15</p>
-                            <h3>Unique Features and Workflows</h3>
+                            <p class="counter-count">20</p>
+                            <h3>Unique Concepts and counting</h3>
                         </div>
                     </div>
                 </div>
