--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
   <!-- ======= Hero Section ======= -->
 
   <section id="hero" class="d-flex flex-column justify-content-center">
-  <h2 align="center"><b>Hello! 👋🏽 I am Anirudh. </b></h2>
+  <h2 align="center"><b>Hello! 👋🏽 I am Anirudh! </b></h2>
       <div class="container" data-aos="zoom-in" data-aos-delay="100">
 
-        <img src="assets/img/Personal/Ani_photo.JPG" class="avatar6" alt="Image of Anirudh Smiling">
+        <img src="assets/img/Personal/Profilephoto.jpg" class="avatar6" alt="Image of Anirudh Smiling">
 
 
 
