--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 <body>
 
-
+<main>
   <nav class="shadow-sm p-3 mb-5 bg-white navbar navbar-default1 navbar-expand-lg navbar-light light">
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -97,7 +97,9 @@
 
       <!-- <div class="center"><button class="custom-btn1 btn-2" onclick="window.location.href='index.html#portfolio'" > VIEW PROJECTS </a></button> </div> -->
     </div>
-  </div><!-- End Hero -->
+  </div>
+
+</main><!-- End Hero -->
 
   <!-- <div class="devicer"></div> -->
 
