--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   <h2 align="center"><b>Hello! 👋🏽 I am Anirudh! </b></h2>
       <div class="container" data-aos="zoom-in" data-aos-delay="100">
 
-        <img src="assets/img/Personal/Profilephoto.jpg" class="avatar6" alt="Image of Anirudh Smiling">
+        <img src="assets/img/Personal/Profilephoto.png" class="avatar6" alt="Image of Anirudh Smiling">
 
 
 
